Created WebApi Entities, DBContext and Migrations

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DevConnection": "server=VIJAY-PC;Database=PaymentDetailDb;Trusted_Connection=True;MultipleActiveResultSets=True;"
+  }
 }
